[package]
name = "{{project_name}}_wasm"
version = "{{version}}"
edition = "2021"
authors = ["{{author}}"]
description = "{{description}}"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = "0.21"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2" 